revised report and ppt. also updated notebook

--- a/3_TalkingData_InferentialStats.ipynb
+++ b/3_TalkingData_InferentialStats.ipynb
@@ -415,9 +415,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Based on the boxen and box plots in the data visualization section above, we see that the distributions are similar between both gender groups. Based on the p-values, the distribution of age between Chinese men and women are not similar. Looking at the box plot above, this may be a result of the outliers present in both groups.\n",
+    "Based on the p-values, the distribution of *age* between Chinese men and women are similar.\n",
     "\n",
-    "However, it seems that the distribution of number of apps per device have the same shape. The p-value is significantly smaller than the significance level."
+    "However, it seems that the distribution of *number of apps* per device do NOT have the same shape. The p-value is significantly smaller than the significance level. This aligns with the observation earlier pointing out men seem to have more apps installed on their phones than women."
    ]
   }
  ],
