--- a/4_TalkingData_ML.ipynb
+++ b/4_TalkingData_ML.ipynb
@@ -302,58 +302,58 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>device_id</th>\n",
-       "      <th>group</th>\n",
        "      <th>app_count</th>\n",
        "      <th>phone</th>\n",
+       "      <th>group_code</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>-8260683887967679142</td>\n",
-       "      <td>M32-38</td>\n",
        "      <td>53</td>\n",
        "      <td>小米 MI 2</td>\n",
+       "      <td>10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>7477216237379271436</td>\n",
-       "      <td>F33-42</td>\n",
        "      <td>26</td>\n",
        "      <td>华为 荣耀6 plus</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>6352067998666467520</td>\n",
-       "      <td>M32-38</td>\n",
        "      <td>19</td>\n",
        "      <td>华为 荣耀畅玩4X</td>\n",
+       "      <td>10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>8026504930081700361</td>\n",
-       "      <td>M23-26</td>\n",
        "      <td>31</td>\n",
        "      <td>小米 MI 4</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>-7271319853104672050</td>\n",
-       "      <td>M27-28</td>\n",
        "      <td>34</td>\n",
        "      <td>三星 Galaxy Note 3</td>\n",
+       "      <td>8</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             device_id   group  app_count             phone\n",
-       "0 -8260683887967679142  M32-38         53           小米 MI 2\n",
-       "1  7477216237379271436  F33-42         26       华为 荣耀6 plus\n",
-       "2  6352067998666467520  M32-38         19         华为 荣耀畅玩4X\n",
-       "3  8026504930081700361  M23-26         31           小米 MI 4\n",
-       "4 -7271319853104672050  M27-28         34  三星 Galaxy Note 3"
+       "             device_id  app_count             phone  group_code\n",
+       "0 -8260683887967679142         53           小米 MI 2          10\n",
+       "1  7477216237379271436         26       华为 荣耀6 plus           4\n",
+       "2  6352067998666467520         19         华为 荣耀畅玩4X          10\n",
+       "3  8026504930081700361         31           小米 MI 4           7\n",
+       "4 -7271319853104672050         34  三星 Galaxy Note 3           8"
       ]
      },
      "execution_count": 5,
@@ -368,7 +368,14 @@
     "\n",
     "X = gender_info.copy()\n",
     "X['phone'] = X.phone_brand + ' ' + X.device_model\n",
-    "X = X.drop(['gender', 'age', 'phone_brand', 'device_model'], axis = 1)\n",
+    "\n",
+    "# ----------------------------------------\n",
+    "# CONVERT GENDER/AGE CATEGORY TO NUMBER  |\n",
+    "# ---------------------------------------\n",
+    "\n",
+    "X['group'] = pd.Categorical(X.group)\n",
+    "X['group_code'] = X.group.cat.codes\n",
+    "X = X.drop(['gender', 'age', 'group', 'phone_brand', 'device_model'], axis = 1)\n",
     "\n",
     "X.head()"
    ]
@@ -586,7 +593,8 @@
     "rfc = RandomForestClassifier()\n",
     "h = FeatureHasher(n_features = 890, input_type = 'string')\n",
     "\n",
-    "X_predictor = X.drop(['device_id', 'group'], axis = 1)\n",
+    "X_predictor = X.drop(['device_id', 'group_code'], axis = 1)\n",
+    "X_target = X.group_code\n",
     "\n",
     "# ------------------\n",
     "# HASHING 'phone'  |\n",
@@ -606,162 +614,12 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>F23-</th>\n",
-       "      <th>F24-26</th>\n",
-       "      <th>F27-28</th>\n",
-       "      <th>F29-32</th>\n",
-       "      <th>F33-42</th>\n",
-       "      <th>F43+</th>\n",
-       "      <th>M22-</th>\n",
-       "      <th>M23-26</th>\n",
-       "      <th>M27-28</th>\n",
-       "      <th>M29-31</th>\n",
-       "      <th>M32-38</th>\n",
-       "      <th>M39+</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   F23-  F24-26  F27-28  F29-32  F33-42  F43+  M22-  M23-26  M27-28  M29-31  \\\n",
-       "0     0       0       0       0       0     0     0       0       0       0   \n",
-       "1     0       0       0       0       1     0     0       0       0       0   \n",
-       "2     0       0       0       0       0     0     0       0       0       0   \n",
-       "3     0       0       0       0       0     0     0       1       0       0   \n",
-       "4     0       0       0       0       0     0     0       0       1       0   \n",
-       "\n",
-       "   M32-38  M39+  \n",
-       "0       1     0  \n",
-       "1       0     0  \n",
-       "2       1     0  \n",
-       "3       0     0  \n",
-       "4       0     0  "
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# ----------------------------------------------\n",
-    "# ENCODE 'group' (ALSO A CATEGORICAL FEATURE)  |\n",
-    "# ---------------------------------------------\n",
-    "\n",
-    "X_target = pd.get_dummies(X.group)\n",
-    "X_target.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "RANDOM FOREST CLASSIFIER\n",
       "------------------------\n",
-      "F1 score: 0.06335436382754994\n"
+      "F1 score: 0.1044042469524184\n"
      ]
     }
    ],
@@ -788,7 +646,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This F1 score is close to 0, indicating the model does not predict the demographic group well.\n",
+    "This F1 score is only 0.1, indicating the model does not predict the demographic group well.\n",
     "\n",
     "**Note:** A feature that *should* be useful in enhancing the model's performance is the category/categories of apps. As an example, females are highly likely to have more beauty apps installed than males. However, I currently do not have experience with dealing with multi-label features or NLP, which would be helpful in handling the 900+ app categories (836 of which are unique values). This project will be revisited and updated as I gain more knowledge in dealing with text data."
    ]
