--- a/Capstone2_TalkingData_Final.ipynb
+++ b/Capstone2_TalkingData_Final.ipynb
@@ -1287,7 +1287,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1629b2a20>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1600d79e8>"
       ]
      },
      "execution_count": 20,
@@ -1469,7 +1469,9 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1500,9 +1502,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Based on the boxen and box plots in the data visualization section above, we see that the distributions are similar between both gender groups. Based on the p-values, the distribution of age between Chinese men and women are not similar. Looking at the box plot above, this may be a result of the outliers present in both groups.\n",
+    "Based on the p-values, the distribution of *age* between Chinese men and women are similar.\n",
     "\n",
-    "However, it seems that the distribution of number of apps per device have the same shape. The p-value is significantly smaller than the significance level."
+    "However, it seems that the distribution of *number of apps* per device do NOT have the same shape. The p-value is significantly smaller than the significance level. This aligns with the observation earlier pointing out men seem to have more apps installed on their phones than women."
    ]
   },
   {
@@ -1539,58 +1541,58 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>device_id</th>\n",
-       "      <th>group</th>\n",
        "      <th>app_count</th>\n",
        "      <th>phone</th>\n",
+       "      <th>group_code</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>-8260683887967679142</td>\n",
-       "      <td>M32-38</td>\n",
        "      <td>53</td>\n",
        "      <td>小米 MI 2</td>\n",
+       "      <td>10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>7477216237379271436</td>\n",
-       "      <td>F33-42</td>\n",
        "      <td>26</td>\n",
        "      <td>华为 荣耀6 plus</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>6352067998666467520</td>\n",
-       "      <td>M32-38</td>\n",
        "      <td>19</td>\n",
        "      <td>华为 荣耀畅玩4X</td>\n",
+       "      <td>10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>8026504930081700361</td>\n",
-       "      <td>M23-26</td>\n",
        "      <td>31</td>\n",
        "      <td>小米 MI 4</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>-7271319853104672050</td>\n",
-       "      <td>M27-28</td>\n",
        "      <td>34</td>\n",
        "      <td>三星 Galaxy Note 3</td>\n",
+       "      <td>8</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             device_id   group  app_count             phone\n",
-       "0 -8260683887967679142  M32-38         53           小米 MI 2\n",
-       "1  7477216237379271436  F33-42         26       华为 荣耀6 plus\n",
-       "2  6352067998666467520  M32-38         19         华为 荣耀畅玩4X\n",
-       "3  8026504930081700361  M23-26         31           小米 MI 4\n",
-       "4 -7271319853104672050  M27-28         34  三星 Galaxy Note 3"
+       "             device_id  app_count             phone  group_code\n",
+       "0 -8260683887967679142         53           小米 MI 2          10\n",
+       "1  7477216237379271436         26       华为 荣耀6 plus           4\n",
+       "2  6352067998666467520         19         华为 荣耀畅玩4X          10\n",
+       "3  8026504930081700361         31           小米 MI 4           7\n",
+       "4 -7271319853104672050         34  三星 Galaxy Note 3           8"
       ]
      },
      "execution_count": 24,
@@ -1605,7 +1607,14 @@
     "\n",
     "X = gender_info.copy()\n",
     "X['phone'] = X.phone_brand + ' ' + X.device_model\n",
-    "X = X.drop(['gender', 'age', 'phone_brand', 'device_model'], axis = 1)\n",
+    "\n",
+    "# ----------------------------------------\n",
+    "# CONVERT GENDER/AGE CATEGORY TO NUMBER  |\n",
+    "# ---------------------------------------\n",
+    "\n",
+    "X['group'] = pd.Categorical(X.group)\n",
+    "X['group_code'] = X.group.cat.codes\n",
+    "X = X.drop(['gender', 'age', 'group', 'phone_brand', 'device_model'], axis = 1)\n",
     "\n",
     "X.head()"
    ]
@@ -1623,13 +1632,196 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "RANDOM FOREST CLASSIFIER\n",
-      "------------------------\n",
-      "F1 score: 0.0672604014355975\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>app_count</th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>...</th>\n",
+       "      <th>880</th>\n",
+       "      <th>881</th>\n",
+       "      <th>882</th>\n",
+       "      <th>883</th>\n",
+       "      <th>884</th>\n",
+       "      <th>885</th>\n",
+       "      <th>886</th>\n",
+       "      <th>887</th>\n",
+       "      <th>888</th>\n",
+       "      <th>889</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>53</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>26</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>19</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>31</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>34</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 891 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   app_count    0    1    2    3    4    5    6    7    8 ...   880  881  882  \\\n",
+       "0         53  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0 ...   0.0  0.0  0.0   \n",
+       "1         26  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0 ...   0.0  0.0  0.0   \n",
+       "2         19  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0 ...   0.0  0.0  0.0   \n",
+       "3         31  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0 ...   0.0  0.0  0.0   \n",
+       "4         34  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0 ...   0.0  0.0  0.0   \n",
+       "\n",
+       "   883  884  885  886  887  888  889  \n",
+       "0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
+       "1  0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
+       "2  0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
+       "3  0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
+       "4  0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
+       "\n",
+       "[5 rows x 891 columns]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1640,7 +1832,8 @@
     "rfc = RandomForestClassifier()\n",
     "h = FeatureHasher(n_features = 890, input_type = 'string')\n",
     "\n",
-    "X_predictor = X.drop(['device_id', 'group'], axis = 1)\n",
+    "X_predictor = X.drop(['device_id', 'group_code'], axis = 1)\n",
+    "X_target = X.group_code\n",
     "\n",
     "# ------------------\n",
     "# HASHING 'phone'  |\n",
@@ -1651,13 +1844,25 @@
     "phones_hash = pd.DataFrame(phones_hash.toarray())\n",
     "X_predictor = pd.concat([X_predictor, phones_hash], axis=1)\n",
     "X_predictor = X_predictor.drop(['phone'], axis = 1)\n",
-    "\n",
-    "# ----------------------------------------------\n",
-    "# ENCODE 'group' (ALSO A CATEGORICAL FEATURE)  |\n",
-    "# ---------------------------------------------\n",
-    "\n",
-    "X_target = pd.get_dummies(X.group)\n",
-    "\n",
+    "X_predictor.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RANDOM FOREST CLASSIFIER\n",
+      "------------------------\n",
+      "F1 score: 0.1053873377900118\n"
+     ]
+    }
+   ],
+   "source": [
     "# --------------------------------------------------\n",
     "# SPLIT INTO TRAINING/TEST SETS & FIT AND PREDICT  |\n",
     "# -------------------------------------------------\n",
